# bevyrpg

./: .gitignore  Cargo.toml  README.md
assets/: Double Shotgun.glb  Furnitures.glb  bbbglb.glb  dev.glb  pistol.glb  playground.blend  playground.blend1  playground.glb  registry.json  registry.json.bak  temp.glb
assets/Free Info Box/: Read Me.txt
assets/dialogue/: test.yarn
assets/guns/: bullet-9mm.glb  bullet-shotgun.glb  bullet-sniper.glb  pistol-coonan.glb  revolver-python.glb  shotgun.glb  smg-mp5.glb  smg-mp5x.glb  sniper.glb  uzi.glb
assets/levels/: Scene.glb  World.glb  devroom.glb  room.glb  room.gltf  room3.glb
assets/materials/: Black.glb  Cover1Bass1.glb  Cream.glb  DarkGray.glb  DarkGrey.001.glb  DarkGrey.glb  Dots Stroke.glb  Glass.glb  Gold.glb  Green.glb  Grey.001.glb  Grey.glb  LightGray.glb  LightGrey.glb  Material.001.glb  Material.002.glb  Material.003.glb  Material.004.glb  Material.005.glb  Material.006.glb  Material.007.glb  Material.008.glb  Material.glb  Material_untitled.glb  Metal1Bass1.glb  MetalCoffeMachine1.glb  Nuovo.1.glb  Nuovo.glb  Pava.glb  SteelCoffeMachine1.glb  SteelFilterHolder1CoffeeMachine1.glb  SteelPipe1CoffeMachine1.glb  SteelSteamKnob1CoffeeMachine1.glb  Texture_Transparent.glb  Wall.glb  Wood1Bass1.glb  Wood2Bass1.glb  Wood3Bass1.glb  brownDark.glb  brownLight.glb  (+15 more)
assets/objects/: MotorOilContainer.3ds  MotorOilContainer.mtl  MotorOilContainer.wings  ProcessingBoard_01.blend  VHS_cassette.mtl  carton.fbx  computer01.3ds  manholecover.dds  manholecover.x  manholecover_frame.x  manholecover_punch.x  mortar.blend  old_fence.dae  pava.blend  peach.blend  rail01OGA_GPL.blend  readme  terminal.blend  test_door.blend  test_door.blend1  test_door.glb  toilet.blend
assets/objects/Doors/: Blue Door.blend  Brown Door.blend1  Green Door.blend  Red Door.blend  Yellow Door.blend
assets/objects/Rat/: Rat.fbx
assets/objects/intercom/: intercom.blend  intercom.fbx
src/: .main.rs.rustfmt  chair.rs  character.rs  computer.rs  console.rs  controller.rs  devroom.rs  dialog.rs  effects.rs  enemy.rs  fpsdevroom.rs  hunger.rs  interact.rs  inventory.rs  level.rs  magic.rs  main.rs  npc.rs  player.rs  render.rs  rover.rs  shoot.rs  spawning.rs  sprites.rs  stealth.rs  tests.rs  trade.rs  ui.rs
src/controller/: console_controller.rs  interact_controller.rs  inventory_controller.rs  menu_controller.rs  mod.rs  player_controller.rs
src/items/: ammo.rs  ammo.sync-conflict-20250503-080855-LGS7676.rs  armor.rs  books.rs  consume.rs  consume.sync-conflict-20250503-080913-LGS7676.rs  item.rs  misc.rs  mod.rs  weapons.rs
src/ui/: console.rs  crosshair.rs  dialog_ui.rs  inventory_ui.rs  mod.rs  settings.rs  status_bar.rs
src/utils/: criteria.rs  math_trait_ext.rs  mod.rs  pipe.rs  util_systems.rs
